feat(index-en.html)

--- a/index-en.html
+++ b/index-en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Cybros Labs technology company</title>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/asset/main.css" />
   </head>
   <body>
-    <div class="site-wrap id="top">
+    <div class="site-wrap" id="top">
       <div class="container">
         <div class="row no-gutters site-navbar align-items-center py-3">
           <div class="col-lg-2 site-logo">
@@ -23,16 +23,16 @@
             <nav class="site-navigation text-right text-md-right">
               <ul class="site-menu js-clone-nav d-none d-lg-block">
                 <li>
-                  <a href="#services">Služby</a>
+                  <a href="#services">Services</a>
                 </li>
                 <li>
-                  <a href="#work">Reference</a>
+                  <a href="#work">References</a>
                 </li>
                 <li>
-                  <a href="#contact">Kontakt</a>
+                  <a href="#contact">Contact</a>
                 </li>
                 <li>
-                  <a href="/index-en.html">English</a>
+                  <a href="/index.html">Česky</a>
                 </li>
               </ul>
             </nav>
@@ -51,11 +51,11 @@
                 </div>
               </blockquote -->
               <div class="cta-box">
-                <h2>Spolu k cíli</h2>
+                <h2>Together to the Goal</h2>
                 <p>
-                  Specializujeme na pokročilé softwarové návrhy, včetně big data, Kubernetes a automatizace. S hlubokým know-how přinášíme efektivní řešení pro naše klienty. Napište nám a pojďme společně realizovat vaše ambice.
+                  We specialize in advanced software designs, including big data, Kubernetes, and automation. With deep expertise, we provide effective solutions for our clients. Contact us and let's realize your ambitions together.
                 </p>
-                <a href="#" class="contact-now" target="_blank" data-contact-email>Napiště nám</a>
+                <a href="#" class="contact-now" target="_blank" data-contact-email>Contact Us</a>
               </div>
             </div>
           </div>
@@ -65,18 +65,18 @@
             <div class="row">
               <div class="col-md-3 service">
                 <i class="fa-solid fa-pen-fancy"></i>
-                <h3>Design & Architektura</h3>
-                <p>Spojujeme kreativitu a technologie pro optimální řešení v oblasti Designu a Architektury. Vytváříme uživatelsky přívětivé aplikace a zajistíme efektivní správu databází. Společně s vámi navrhujeme a realizujeme koncept řešení, bez ohledu na velikost projektu.</p>
+                <h3>Design & Architecture</h3>
+                <p>We combine creativity and technology for optimal solutions in Design and Architecture. We create user-friendly applications and ensure efficient database management. Together with you, we design and implement solution concepts, regardless of project size.</p>
                 <ul class="list-unstyled services-list">
                   <li>Angular/React</li>
                   <li>ASP.NET</li>
-                  <li>PostgreSql</li>
+                  <li>PostgreSQL</li>
                 </ul>
               </div>
               <div class="col-md-3 service">
                 <i class="fa-solid fa-mobile-screen"></i>
-                <h3>Mobilní Aplikace</h3>
-                <p>Váš partner v oblasti Mobilních Aplikací, poskytující služby od návrhu po realizaci. Pomůžeme vám vytvořit inovativní mobilní aplikaci pro různá zařízení, využívající moderní technologie, včetně .NET MAUI, a zajistíme, aby splňovala očekávání uživatelů.</p>
+                <h3>Mobile Applications</h3>
+                <p>Your partner in Mobile Applications, providing services from design to implementation. We help you create innovative mobile applications for various devices, utilizing modern technologies, including .NET MAUI, ensuring they meet user expectations.</p>
                 <ul class="list-unstyled services-list">
                   <li>.NET MAUI</li>
                 </ul>
@@ -84,19 +84,19 @@
               <div class="col-md-3 service">
                 <i class="fa-solid fa-gears"></i>
                 <h3>DevOps</h3>
-                <p>Poskytujeme Vám komplexní podporu při implementaci Kubernetes clusterů a automatizaci procesů. S naším know-how v oblasti Kubernetes zajišťujeme efektivní a škálovatelná řešení pro správu aplikací a infrastruktury. Naše automatizační služby optimalizují procesy, což vede ke zrychlení vývoje a zlepšení celkového výkonu.</p>
+                <p>We offer comprehensive support for implementing Kubernetes clusters and process automation. With our Kubernetes expertise, we ensure efficient and scalable solutions for managing applications and infrastructure. Our automation services optimize processes, leading to accelerated development and improved overall performance.</p>
                 <ul class="list-unstyled services-list">
                   <li>Kubernetes</li>
-                  <li>Automatizace</li>
+                  <li>Automation</li>
                 </ul>
               </div>
               <div class="col-md-3 service">
                 <i class="fa-solid fa-mobile-screen"></i>
-                <h3>Infrastruktura</h3>
-                <p>Asistujeme Vám při návrhu infrastruktury pro optimální podporu vašich aplikací. Specializujeme se na vysokou dostupnost a distribuované systémy, zajistíme efektivní a plně přizpůsobenou infrastrukturu. S naším přístupem získáte pevný základ pro spolehlivý provoz a maximalizaci výkonu.</p>
+                <h3>Infrastructure</h3>
+                <p>We assist you in designing infrastructure for optimal support of your applications. We specialize in high availability and distributed systems, ensuring efficient and fully customized infrastructure. With our approach, you gain a solid foundation for reliable operation and performance maximization.</p>
                 <ul class="list-unstyled services-list">
-                  <li>Vysoká dostupnost</li>
-                  <li>Distribuované systémy</li>
+                  <li>High Availability</li>
+                  <li>Distributed Systems</li>
                 </ul>
               </div>
             </div>
@@ -107,53 +107,53 @@
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
               <div class="half-content img" style="background-size: 25%; background-image: url('asset/images/ro_transelectrica.png')"></div>
               <div class="half-content align-self-center">
-                <h3>Energetická data rychle a bezpečně</h3>
-                <p>Návrh řešení, nasazení, koordinace integrací</p>
-                <p>Realizovali jsme nasazení systému pro dálkový sběr energetických dat s podporou monitoringu a úspěšně integrovali tuto technologii s dalšími energetickými systémy. Naše klíčové technologické prvky zahrnují RKE2, PostgreSql a Converge 4, které jsme implementovali s důrazem na rychlost, bezpečnost a spolehlivost.</p>
+                <h3>Energy Data Fast and Secure</h3>
+                <p>Solution design, deployment, integration coordination</p>
+                <p>We deployed a system for remote collection of energy data with monitoring support and successfully integrated this technology with other energy systems. Our key technological elements include RKE2, PostgreSql, and Converge 4, implemented with a focus on speed, security, and reliability.</p>
                 <p>
-                  <strong>Technologie:</strong> RKE2, PostgreSql, Converge 4<br />
-                  <strong>Klient:</strong> Transelectrica, RO<br />
-                  <strong>Datum:</strong> 2023
+                    <strong>Technologies:</strong> RKE2, PostgreSql, Converge 4<br />
+                    <strong>Client:</strong> Transelectrica, RO<br />
+                    <strong>Date:</strong> 2023
                 </p>
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
               <div class="half-content img order-md-2" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
               <div class="half-content align-self-center">
-                <h3>Systém pro rozvozní společnost</h3>
-                <p>Navrh, realizace, provoz</p>
-                <p>Vytváříme systém pro plánování a řízení rozvozu zboží. Tato realizace poskytuje společnosti efektivní nástroj k optimalizaci a sledování distribučních procesů. Jsme rádi, že jsme mohli přispět k operativní efektivitě klienta v oblasti rozvozu zboží.</p>
+                <h3>System for Delivery Company</h3>
+                <p>Design, implementation, operation</p>
+                <p>We are creating a system for planning and managing goods delivery. This implementation provides the company with an efficient tool for optimizing and monitoring distribution processes. We are pleased to contribute to the operational efficiency of the client in the field of goods delivery.</p>
                 <p>
-                  <strong>Technologie:</strong> ASP.NET, PostgreSql<br />
-                  <strong>Platforma:</strong> Kubernetes<br />
-                  <strong>Klient:</strong> delivrium s.r.o., CZ<br />
-                  <strong>Datum:</strong> 2023 (probíhá)
+                    <strong>Technologies:</strong> ASP.NET, PostgreSql<br />
+                    <strong>Platform:</strong> Kubernetes<br />
+                    <strong>Client:</strong> delivrium s.r.o., CZ<br />
+                    <strong>Date:</strong> 2023 (ongoing)
                 </p>
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
               <div class="half-content img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
               <div class="half-content align-self-center">
-                <h3>Front-end interního systému</h3>
-                <p>Návrh, vývoj</p>
-                <p>Provádíme návrh interní webové aplikace a zajišťujeme realizaci její front-end části. Naše práce spočívala ve vytvoření uživatelsky přívětivého rozhraní, které plně odpovídá potřebám interních procesů.</p>
+                <h3>Internal System Front-end</h3>
+                <p>Design, development</p>
+                <p>We design an internal web application and handle the implementation of its front-end part. Our work involved creating a user-friendly interface that fully meets the needs of internal processes.</p>
                 <p>
-                  <strong>Technologie:</strong> Angular<br />
-                  <strong>Klient:</strong> Komeční Banka a.s., CZ<br />
-                  <strong>Datum:</strong> 2021 (probíhá)
+                    <strong>Technologies:</strong> Angular<br />
+                    <strong>Client:</strong> Komeční Banka a.s., CZ<br />
+                    <strong>Date:</strong> 2021 (ongoing)
                 </p>
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
               <div class="half-content img order-md-2" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
               <div class="half-content align-self-center">
-                <h3>Energetická data v mobilu</h3>
-                <p>Navrh, implementace, realizace</p>
-                <p>Zajišťujeme kompletní proces od návrhu po realizaci pro vývoj mobilní aplikace určené k práci s energetickými daty. Naši specialisté se zaměřili na efektivní návrh a implementaci aplikace, která umožňuje snadnou práci s elektroměry na mobilních telefonech s operačními systémy Android a iOS. Cílem bylo poskytnout uživatelsky přívětivý a funkční nástroj pro manipulaci s energetickými daty na mobilních zařízeních.</p>
+                <h3>Energy Data on Mobile</h3>
+                <p>Design, implementation, deployment</p>
+                <p>We handle the complete process from design to implementation for the development of a mobile application for working with energy data. Our specialists focused on efficient design and implementation of an application that allows easy handling of electricity meters on mobile phones with Android and iOS operating systems. The goal was to provide a user-friendly and functional tool for manipulating energy data on mobile devices.</p>
                 <p>
-                  <strong>Technologie:</strong> .NET MAUI<br />
-                  <strong>Platforma:</strong> Android, iOS<br />
-                  <strong>Klient:</strong> EG.D, a.s., Pražská energetika, a. s. a další<br />
+                    <strong>Technologies:</strong> .NET MAUI<br />
+                    <strong>Platform:</strong> Android, iOS<br />
+                    <strong>Client:</strong> EG.D, a.s., Pražská energetika, a.s., and others<br />
                 </p>
               </div>
             </div>
@@ -186,7 +186,7 @@
                     <!-- 
                     &OpenCurlyDoubleQuote;Meet our Co-Owner, a visionary leader with a rich background in R&D management and solution architecture. As a driving force behind our software development company, they've led groundbreaking projects, from refining the Converge head-end system to pioneering automated CI/CD pipelines. Proficient in Python, C, .NET C#, and more, their technical prowess is matched by an unwavering commitment to innovation. Beyond their stellar career, their extroverted personality, leadership in Toastmasters, and achievements in Taijiquan embody a holistic approach to success. Join us in shaping the future of technology under their dynamic leadership.&CloseCurlyDoubleQuote;
                     -->
-                    &OpenCurlyDoubleQuote;Zkušený vizionář v oblasti výzkumu, vývoje a architektury, který vedl klíčové projekty od zdokonalení systému Converge head-end po průkopnickou automatizaci CI/CD pipelines. Jeho odbornost a vášeň pro inovace jsou doplněny neochvějným závazkem.&CloseCurlyDoubleQuote;
+                    &OpenCurlyDoubleQuote;An experienced visionary in the field of research, development, and architecture, who has led key projects ranging from refining the Converge head-end system to pioneering the automation of CI/CD pipelines. His expertise and passion for innovation are complemented by an unwavering commitment.&CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
@@ -212,34 +212,33 @@
           <div class="row" id="contact">
             <div class="col-lg-6">
               <div class="widget mb-4">
-                <h3>O nás</h3>
+                <h3>About Us</h3>
                 <p>
-                  Spojujeme kreativitu a technologie pro optimální řešení v oblasti designu a architektury aplikací, devops, infrastruktury. Vytváříme uživatelsky přívětivá řešení, realizujeme koncepty bez ohledu na velikost projektu a poskytujeme komplexní služby od návrhu po realizaci. Zaměřujeme se na inovativní technologie a efektivní správu aplikací a infrastruktury, abychom společně s vámi budovali spolehlivé a výkonné IT systémy.
+                  We combine creativity and technology for optimal solutions in the fields of application design and architecture, devops, and infrastructure. We create user-friendly solutions, implement concepts regardless of project size, and provide comprehensive services from design to implementation. We focus on innovative technologies and efficient application and infrastructure management to build reliable and high-performance IT systems together with you.
                 </p>
               </div>
             </div>
             <div class="col-lg-3">
               <div class="widget mb-4">
-                <h3>Najdete nás</h3>
+                <h3>Find Us</h3>
                 <p>
-                  Smíchov Business Park a.s.<br />
-                  Strakonická 3367<br />
-                  150 00 Praha 5<br />
-                  budova A<br />
+                  Smichov Business Park a.s.<br />
+                  Strakonicka 3367<br />
+                  150 00 Prague 5<br />
+                  building A<br />
                   <a href="#" data-contact-email data-contact-email-print></a><br />
                 </p>
               </div>
             </div>
             <div class="col-lg-3">
               <div class="widget mb-4">
-                <h3>Fakturační adresa</h3>
+                <h3>Billing Address</h3>
                 <p>
                   dDash s.r.o.<br />
                   Devonská 1223/5<br />
                   Hlubočepy<br />
-                  152 00 Praha<br />
-                  IČ: 06305741<br />                  
-                  DIČ: CZ06305741<br />                  
+                  152 00 Prague<br />
+                  VAT: CZ06305741<br />                  
                 </p>
               </div>
             </div>          </div>
