--- a/index-en.html
+++ b/index-en.html
@@ -238,7 +238,8 @@
                   Devonská 1223/5<br />
                   Hlubočepy<br />
                   152 00 Prague<br />
-                  VAT: CZ06305741<br />                  
+                  ID: CZ06305741<br />                  
+                  TIN: CZ06305741<br />                  
                 </p>
               </div>
             </div>          </div>
