fix: mobile view

--- a/index-en.html
+++ b/index-en.html
@@ -42,7 +42,7 @@
       <main>
         <div class="site-hero">
           <div class="container">
-            <div class="bg-img">
+            <div class="d-flex flex-row-reverse">
               <!-- blockquote>
                 <p>Hmm</p>
                 <div class="author">
@@ -186,7 +186,7 @@
                     <!-- 
                     &OpenCurlyDoubleQuote;Meet our Co-Owner, a visionary leader with a rich background in R&D management and solution architecture. As a driving force behind our software development company, they've led groundbreaking projects, from refining the Converge head-end system to pioneering automated CI/CD pipelines. Proficient in Python, C, .NET C#, and more, their technical prowess is matched by an unwavering commitment to innovation. Beyond their stellar career, their extroverted personality, leadership in Toastmasters, and achievements in Taijiquan embody a holistic approach to success. Join us in shaping the future of technology under their dynamic leadership.&CloseCurlyDoubleQuote;
                     -->
-                    &OpenCurlyDoubleQuote;An experienced visionary in the field of research, development, and architecture, who has led key projects ranging from refining the Converge head-end system to pioneering the automation of CI/CD pipelines. His expertise and passion for innovation are complemented by an unwavering commitment.&CloseCurlyDoubleQuote;
+                    &OpenCurlyDoubleQuote;A Master in the art of Jedi technology, who has emerged as a fearless visionary in the realm of research, development, and architecture. He has perfected key projects, ranging from refining the Converge head-end system to pioneering the automation of CI/CD pipelines in the galaxy. His masterful expertise and passion for innovation are illuminated by an unwavering commitment to pushing the boundaries of technological prowess in the world of the Jedi.&CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
@@ -235,8 +235,8 @@
                 <h3>Billing Address</h3>
                 <p>
                   dDash s.r.o.<br />
-                  Devonská 1223/5<br />
-                  Hlubočepy<br />
+                  Devonska 1223/5<br />
+                  Hlubocepy<br />
                   152 00 Prague<br />
                   ID: CZ06305741<br />                  
                   TIN: CZ06305741<br />                  
