--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <main>
         <div class="site-hero">
           <div class="container">
-            <div class="bg-img">
+            <div class="d-flex flex-row-reverse">
               <!-- blockquote>
                 <p>Hmm</p>
                 <div class="author">
@@ -186,7 +186,7 @@
                     <!-- 
                     &OpenCurlyDoubleQuote;Meet our Co-Owner, a visionary leader with a rich background in R&D management and solution architecture. As a driving force behind our software development company, they've led groundbreaking projects, from refining the Converge head-end system to pioneering automated CI/CD pipelines. Proficient in Python, C, .NET C#, and more, their technical prowess is matched by an unwavering commitment to innovation. Beyond their stellar career, their extroverted personality, leadership in Toastmasters, and achievements in Taijiquan embody a holistic approach to success. Join us in shaping the future of technology under their dynamic leadership.&CloseCurlyDoubleQuote;
                     -->
-                    &OpenCurlyDoubleQuote;Zkušený vizionář v oblasti výzkumu, vývoje a architektury, který vedl klíčové projekty od zdokonalení systému Converge head-end po průkopnickou automatizaci CI/CD pipelines. Jeho odbornost a vášeň pro inovace jsou doplněny neochvějným závazkem.&CloseCurlyDoubleQuote;
+                    &OpenCurlyDoubleQuote;Mistr v umění Jedijské technologie, jenž se vynořil jako neohrožený vizionář v oblasti výzkumu, vývoje a architektury. Přivedl k dokonalosti klíčové projekty od zdokonalení systému Converge head-end až po průkopnickou automatizaci CI/CD pipelines v galaxii. Jeho mistrovská znalost a vášeň pro inovace jsou osvíceny neochvějným závazkem k posunutí hranic technologické síly na světě Jediů.&CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
