--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="site-section" id="work">
           <div class="container">
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
-              <div class="half-content img" style="background-size: 25%; background-image: url('asset/images/ro_transelectrica.png')"></div>
+              <div class="img" style="background-size: 25%; background-image: url('asset/images/ro_transelectrica.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energetická data rychle a bezpečně</h3>
                 <p>Návrh řešení, nasazení, koordinace integrací</p>
@@ -118,7 +118,6 @@
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
-              <div class="half-content img order-md-2" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Systém pro rozvozní společnost</h3>
                 <p>Navrh, realizace, provoz</p>
@@ -130,9 +129,10 @@
                   <strong>Datum:</strong> 2023 (probíhá)
                 </p>
               </div>
+              <div class="img" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
-              <div class="half-content img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
+              <div class="img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
               <div class="half-content align-self-center">
                 <h3>Front-end interního systému</h3>
                 <p>Návrh, vývoj</p>
@@ -145,7 +145,6 @@
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
-              <div class="half-content img order-md-2" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energetická data v mobilu</h3>
                 <p>Navrh, implementace, realizace</p>
@@ -156,6 +155,7 @@
                   <strong>Klient:</strong> EG.D, a.s., Pražská energetika, a. s. a další<br />
                 </p>
               </div>
+              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
             </div>
           </div>
         </div>
