--- a/index-en.html
+++ b/index-en.html
@@ -105,7 +105,7 @@
         <div class="site-section" id="work">
           <div class="container">
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
-              <div class="half-content img" style="background-size: 25%; background-image: url('asset/images/ro_transelectrica.png')"></div>
+              <div class="img" style="background-size: 25%; background-image: url('asset/images/ro_transelectrica.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energy Data Fast and Secure</h3>
                 <p>Solution design, deployment, integration coordination</p>
@@ -118,7 +118,6 @@
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
-              <div class="half-content img order-md-2" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
               <div class="half-content align-self-center">
                 <h3>System for Delivery Company</h3>
                 <p>Design, implementation, operation</p>
@@ -130,9 +129,10 @@
                     <strong>Date:</strong> 2023 (ongoing)
                 </p>
               </div>
+              <div class="img" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
-              <div class="half-content img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
+              <div class="img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
               <div class="half-content align-self-center">
                 <h3>Internal System Front-end</h3>
                 <p>Design, development</p>
@@ -145,7 +145,6 @@
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
-              <div class="half-content img order-md-2" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energy Data on Mobile</h3>
                 <p>Design, implementation, deployment</p>
@@ -156,6 +155,7 @@
                     <strong>Client:</strong> EG.D, a.s., Pražská energetika, a.s., and others<br />
                 </p>
               </div>
+              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
             </div>
           </div>
         </div>
