--- a/index-en.html
+++ b/index-en.html
@@ -117,7 +117,8 @@
                 </p>
               </div>
             </div>
-            <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
+            <div class="half d-md-flex align-items-stretch flex-row-reverse" data-aos="fade-left">
+              <div class="img" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
               <div class="half-content align-self-center">
                 <h3>System for Delivery Company</h3>
                 <p>Design, implementation, operation</p>
@@ -129,7 +130,6 @@
                     <strong>Date:</strong> 2023 (ongoing)
                 </p>
               </div>
-              <div class="img" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
               <div class="img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
@@ -144,7 +144,8 @@
                 </p>
               </div>
             </div>
-            <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
+            <div class="half d-md-flex align-items-stretch flex-row-reverse" data-aos="fade-left">
+              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energy Data on Mobile</h3>
                 <p>Design, implementation, deployment</p>
@@ -155,7 +156,6 @@
                     <strong>Client:</strong> EG.D, a.s., Pražská energetika, a.s., and others<br />
                 </p>
               </div>
-              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
             </div>
           </div>
         </div>
