--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                 </p>
               </div>
             </div>
-            <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
+            <div class="half d-md-flex align-items-stretch flex-row-reverse" data-aos="fade-left">
+              <div class="img" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Systém pro rozvozní společnost</h3>
                 <p>Navrh, realizace, provoz</p>
@@ -129,7 +130,6 @@
                   <strong>Datum:</strong> 2023 (probíhá)
                 </p>
               </div>
-              <div class="img" style="background-size: initial; background-image: url('asset/images/cz_bevy.png')"></div>
             </div>
             <div class="half d-md-flex align-items-stretch" data-aos="fade-right">
               <div class="img" style="background-size: 40%; background-image: url('asset/images/cz_kb.svg')"></div>
@@ -144,7 +144,8 @@
                 </p>
               </div>
             </div>
-            <div class="half d-md-flex align-items-stretch" data-aos="fade-left">
+            <div class="half d-md-flex align-items-stretch flex-row-reverse" data-aos="fade-left">
+              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
               <div class="half-content align-self-center">
                 <h3>Energetická data v mobilu</h3>
                 <p>Navrh, implementace, realizace</p>
@@ -155,7 +156,6 @@
                   <strong>Klient:</strong> EG.D, a.s., Pražská energetika, a. s. a další<br />
                 </p>
               </div>
-              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
             </div>
           </div>
         </div>
