--- a/index-en.html
+++ b/index-en.html
@@ -21,7 +21,7 @@
           </div>
           <div class="col-lg-10 text-right menu text-end">
             <nav class="site-navigation text-right text-md-right">
-              <ul class="site-menu js-clone-nav d-none d-lg-block">
+              <ul class="site-menu d-none d-lg-block">
                 <li>
                   <a href="#services">Services</a>
                 </li>
