docs: add phone contact

--- a/index-en.html
+++ b/index-en.html
@@ -75,7 +75,7 @@
               </div>
               <div class="col-md-3 service">
                 <i class="fa-solid fa-mobile-screen"></i>
-                <h3>Mobile Applications</h3>
+                <h3>Mobile Apps</h3>
                 <p>Your partner in Mobile Applications, providing services from design to implementation. We help you create innovative mobile applications for various devices, utilizing modern technologies, including .NET MAUI, ensuring they meet user expectations.</p>
                 <ul class="list-unstyled services-list">
                   <li>.NET MAUI</li>
@@ -227,6 +227,7 @@
                   150 00 Prague 5<br />
                   building A<br />
                   <a href="#" data-contact-email data-contact-email-print></a><br />
+                  <a href="#" data-contact-phone data-contact-phone-print></a>
                 </p>
               </div>
             </div>
