--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                   150 00 Praha 5<br />
                   budova A<br />
                   <a href="#" data-contact-email data-contact-email-print></a><br />
+                  <a href="#" data-contact-phone data-contact-phone-print></a>
                 </p>
               </div>
             </div>
