docs: remove a.s. from location

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <div class="widget mb-4">
                 <h3>Najdete nás</h3>
                 <p>
-                  Smíchov Business Park a.s.<br />
+                  Smíchov Business Park<br />
                   Strakonická 3367<br />
                   150 00 Praha 5<br />
                   budova A<br />
