--- a/index-en.html
+++ b/index-en.html
@@ -222,7 +222,7 @@
               <div class="widget mb-4">
                 <h3>Find Us</h3>
                 <p>
-                  Smichov Business Park a.s.<br />
+                  Smichov Business Park<br />
                   Strakonicka 3367<br />
                   150 00 Prague 5<br />
                   building A<br />
