--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </div>
             </div>
             <div class="half d-md-flex align-items-stretch flex-row-reverse" data-aos="fade-left">
-              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.png')"></div>
+              <div class="img" style="background-size: 30%; background-image: url('asset/images/cz_egd.svg')"></div>
               <div class="half-content align-self-center">
                 <h3>Energetická data v mobilu</h3>
                 <p>Navrh, implementace, realizace</p>
