fix(index.html): typo

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="/asset/main.css" />
   </head>
   <body>
-    <div class="site-wrap id="top">
+    <div class="site-wrap" id="top">
       <div class="container">
         <div class="row no-gutters site-navbar align-items-center py-3">
           <div class="col-lg-2 site-logo">
-            <a href="/index.html"><img src="asset/images/logo_colors.svg" /></a>
+            <a href="/index.html"><img src="asset/images/logo_colors.svg" alt="background" /></a>
           </div>
           <div class="col-lg-10 text-right menu text-end">
             <nav class="site-navigation text-right text-md-right">
