docs: add DJ info

--- a/index-en.html
+++ b/index-en.html
@@ -170,8 +170,9 @@
                     <span>Founder</span>
                   </div>
                   <blockquote>
-                    &OpenCurlyDoubleQuote;
-                    &CloseCurlyDoubleQuote;
+                    &OpenCurlyDoubleQuote;Dalibor, akin to a masterful dwarf craftsman, began in the cavernous halls of customer service management, shaping experiences as deftly as a dwarf shapes metal. He then navigated through the labyrinthine tunnels of software and solution delivery at Landis+Gyr, with the precision and skill of a dwarven artisan.
+                    <br />
+                    Embracing the spirit of adventure, Dalibor set forth to forge new paths, founding dDash s.r.o. and steering CTBF Partners a.s., much like a dwarf exploring uncharted territories. His latest quest, the Cybros Foundation, is akin to seeking rare and powerful runes, delving into open core software for the energy market.&CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
