--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
                     <span>Founder</span>
                   </div>
                   <blockquote>
-                    &OpenCurlyDoubleQuote;
-                    &CloseCurlyDoubleQuote;
+                    &OpenCurlyDoubleQuote;Dalibor, podobný mistrovskému trpasličímu řemeslníkovi, začal ve skalnatých síních řízení zákaznického servisu, formující zážitky stejně zručně jako trpaslík tvaruje kov. Poté se proplétal labyrintickými tunely softwaru a dodávky řešení v Landis+Gyr s precizností a dovedností trpasličího řemeslníka.
+                    <br />
+                    Přijímaje ducha dobrodružství, Dalibor vyrazil k vytváření nových cest, zakládaje dDash s.r.o. a navigující CTBF Partners a.s., podobně jako trpaslík zkoumající nezkoumaná území. Jeho nejnovější quest, Cybros Foundation, je podobný hledání vzácných a mocných run, vstupujíc do otevřeného jádra softwaru pro energetický trh.&CloseCurlyDoubleQuote;
                   </blockquote>
                 </div>
               </div>
