chore(index.html): address

--- a/index-en.html
+++ b/index-en.html
@@ -212,7 +212,8 @@
                 <p>
                   Smichov Business Park<br />
                   Strakonicka 3367<br />
-                  150 00 Prague 5<br />
+                  Smichov<br />
+                  150 00 Prague<br />
                   building A<br />
                   <a href="#" data-contact-email data-contact-email-print></a><br />
                   <a href="#" data-contact-phone data-contact-phone-print></a>
@@ -224,9 +225,9 @@
                 <h3>Billing Address</h3>
                 <p>
                   dDash s.r.o.<br />
-                  Devonska 1223/5<br />
-                  Hlubocepy<br />
-                  152 00 Prague<br />
+                  Strakonicka 3367<br />
+                  Smichov<br />
+                  150 00 Prague<br />
                   ID: CZ06305741<br />                  
                   TIN: CZ06305741<br />                  
                 </p>
