--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                 <p>
                   Smíchov Business Park<br />
                   Strakonická 3367<br />
-                  150 00 Praha 5<br />
+                  Smíchov<br />
+                  150 00 Praha<br />
                   budova A<br />
                   <a href="#" data-contact-email data-contact-email-print></a><br />
                   <a href="#" data-contact-phone data-contact-phone-print></a>
@@ -224,9 +225,9 @@
                 <h3>Fakturační adresa</h3>
                 <p>
                   dDash s.r.o.<br />
-                  Devonská 1223/5<br />
-                  Hlubočepy<br />
-                  152 00 Praha<br />
+                  Strakonická 3367<br />
+                  Smíchov<br />
+                  150 00 Praha<br />
                   IČ: 06305741<br />                  
                   DIČ: CZ06305741<br />                  
                 </p>
